<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evernote</string>
    <string name="evernote">Evernote BMSTU</string>
    <string name="title_activity_login">Login</string>
    <string name="sync">Synchronization</string>
    <string name="sync_settings_summary">Sync</string>
    <string name="general_settings">General settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo_content_description">logo</string>
    <string name="search">Search</string>
    <string name="menu_sort">Сортировка…</string>
    <string name="menu_sync">Синхронизировать</string>
    <string name="menu_options">Настройки</string>
    <string name="menu_add_to_home_screen">Добавить на домашний экран</string>
    <string name="title_activity_main">Evernote</string>
    <string name="title_section1">Все заметки</string>
    <string name="title_section2">Все блокноты</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_test_database">TestDatabaseActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnNO">ОТМЕНИТЬ</string>
    <string name="btnYes">СОХРАНИТЬ</string>
    <string name="createNote">Создайте заметку</string>
    <string name="createNotebook">Создайте простой блокнот</string>


    <string-array name="drawer_items_views_names">
        <item>Заметки</item>
        <item>Блокноты</item>
        <item>TEST TRANSACTIONS</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_drawer_notes</item>
        <item>@drawable/ic_drawer_notebooks</item>
        <item>@drawable/ic_drawer_white_notebooks</item>
    </array>

    <string name="desc_list_item_icon">Item Icon</string>

    <string name="menu">Меню</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="title_checkbox_preference">test_checkbox_preference</string>
    <string name="summary_checkbox_preference">test_checkbox_preference_summary</string>
    <string name="inline_preferences">test_inline_preference</string>
    <string name="dialog_based_preferences">test_dialog_based_preference</string>
    <string name="title_edittext_preference">test_edittext_preference</string>
    <string name="summary_edittext_preference">test_edittext_preference_summary</string>
    <string name="dialog_title_edittext_preference">test_edittext_preference_dialog</string>
    <string name="launch_preferences">test_launch_preferences</string>
    <string name="title_screen_preference">title_screen_preference</string>
    <string name="pref_header_general">Главные настройки</string>
    <string name="title_activity_settings">Settings</string>


    <string name="green">#2dbe60</string>
    <string name="yellow">#f2f24b</string>
    <string name="blue">#2a5bfc</string>
    <string name="black">#000000</string>

    <string-array name="pref_sync_period_titles">
        <item>15 минут</item>
        <item>30 минут</item>
        <item>1 час</item>
        <item>24 часа</item>
    </string-array>
    <string-array name="pref_sync_period_values">
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>86400</item>
    </string-array>
    <string-array name="pref_layout_colors_titles">
        <item>Зеленый</item>
        <item>Желтый</item>
        <item>Синий</item>
        <item>Черный</item>
    </string-array>
    <string-array name="pref_layout_colors_values">
        <item>@string/green</item>
        <item>@string/yellow</item>
        <item>@string/blue</item>
        <item>@string/black</item>
    </string-array>
</resources>