<!--<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.bmstu.evernote.activities.SplashScreen" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>


        android:icon="@drawable/abc_ic_search"
        android:icon="@drawable/abc_ic_menu_moreoverflow_normal_holo_dark"
        -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.bmstu.evernote.activities.MainActivity">
    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/search"
        android:showAsAction="always"/>
    <item android:id="@+id/action_add_to_home_screen"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_add_to_home_screen"
        android:showAsAction="always">
        <menu>
            <item android:id="@+id/action_sort"
                android:title="@string/menu_sort"
                android:showAsAction="ifRoom"/>
            <item android:id="@+id/action_sync"
                android:title="@string/menu_sync"
                android:showAsAction="ifRoom"/>
            <item android:id="@+id/action_options"
                android:title="@string/menu_options"
                android:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>